namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-prison-network-app-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-prison-network-app-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "prisons-data-science"
    cloud-platform.justice.gov.uk/application: "Prison Network App"
    cloud-platform.justice.gov.uk/owner: "prison intelligence data science: intel_app_support@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/prison-network-app"
    cloud-platform.justice.gov.uk/team-name: "prison-network-app-admin-team"
    cloud-platform.justice.gov.uk/review-after: ""
